--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.2.9",
     "react": "18.1.0",
     "react-native": "0.70.3",
+    "react-native-paper": "^5.0.0-rc.8",
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
